--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ article h1{
     color: aliceblue;
     font-size: 3em;
     text-align: center;
-    margin-top: 35%;
+    margin-top: 30%;
 }
 
 article h3{
@@ -47,15 +47,21 @@ article h3{
     letter-spacing: .4em;
 }
 
+footer{
+    margin-top: 5%;
+}
+
 footer p{
     text-align: center;
     color: aliceblue;
-    margin-top: 20%;
+    font-family: sans-serif;
+    font-size: .8em;
 }
 
 footer nav{
    margin-left: 41%;
-    margin-top: 3%;
+   margin-bottom: 3%;
+   margin-top: 1%;
        
 }
 
